Enhanced UI responsiveness

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,4 @@ Temporary commit content 238
 Temporary commit content 239
 Temporary commit content 254
 Temporary commit content 274
+Temporary commit content 275
