Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -13,3 +13,4 @@ Temporary commit content 67
 Temporary commit content 83
 Temporary commit content 86
 Temporary commit content 103
+Temporary commit content 106
