--- a/config.json
+++ b/config.json
@@ -9,3 +9,4 @@ Temporary commit content 57
 Temporary commit content 58
 Temporary commit content 61
 Temporary commit content 65
+Temporary commit content 67
