Optimized database queries

--- a/config.json
+++ b/config.json
@@ -12,3 +12,4 @@ Temporary commit content 65
 Temporary commit content 67
 Temporary commit content 83
 Temporary commit content 86
+Temporary commit content 103
